1662 support asynchronous browsing in opc ua adapter (#1675)
* Support asynchronous browsing in OPC adapter (#1662)

* Improve validation of completed static properties (#1662)

* Update Milo version, add more metadata (#1662)

* Improve formatting

* Fix validation of tree input

* Remove obsolete keys from strings file

* Cleanup OPC UA config classes